# Transformer-model-translater

./: .gitignore  README.md  main.py  pyproject.toml
resources/: config.yaml
src/dataset/: __init__.py  dataset.py
src/training/: train.py
src/transformer/blocks/: __init__.py  decoder_block.py  encoder_block.py
src/transformer/layers/: __init__.py  feedforward.py  input_embedding.py  multihead_attention.py  normalization_layer.py  positional_encoding.py  projection_layer.py  residual_connection.py
src/transformer/model/: decoder.py  encoder.py  transformer.py
